--- a/static/index.html
+++ b/static/index.html
@@ -146,7 +146,17 @@
     
     <script>
         // --- NOTE: THIS CODE WAS MOVED FROM main.js ---
+// In static/index.html (inside the <script> block)
 
+// Find the fetch() call for checkCompliance and generateOutput:
+fetch('https://adapti-creative-ai-studio.onrender.com/api/check-compliance', { // NOTE: Use the HTTPS URL
+    method: 'POST',
+    headers: {
+        'Content-Type': 'application/json',
+        // ADD THIS HEADER: Tells the server the request is coming from the true host
+        'X-Render-External-Hostname': 'adapti-creative-ai-studio.onrender.com' 
+    },
+    // ... rest of the code ...
         function checkCompliance() {
             // 1. Get data from the simulation inputs
             const x_tl = parseInt(document.getElementById('x_tl').value);
